# sandbox-claude

./: .gitignore  Makefile  PLAYWRIGHT_QUICKSTART.md  README.md  init-claude-config.sh  pyproject.toml  setup.sh  sync-to-host.sh  test_clean.py
docker/: Dockerfile  entrypoint.sh  mcp-config.json  mcp-playwright-server.py  pull-claude-config.sh  sync-claude-config.sh
src/sandbox_claude/: __init__.py  cli.py  config_sync.py  constants.py  container_manager.py  logging_config.py  session_store.py  utils.py
tests/: test_config_sync.py  test_session_store.py  test_utils.py
